--- a/src/app/child-component/azure-postgresql/azure-postgresql.component.html
+++ b/src/app/child-component/azure-postgresql/azure-postgresql.component.html
@@ -24,7 +24,7 @@
         </div>
         <div  class="grid grid-cols-1 pt-2">
           <label for="azure-compute-price" class="block text-sm font-medium text-gray-700">Price per hour</label>
-          <input type="text" id="azure-compute-price" #azureInstancePrice name="azure-compute-price"
+          <input type="text" id="azure-compute-price" name="azure-compute-price"
                  class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm"
                  [(ngModel)]="selectedPricePerHour" disabled>
         </div>
