--- a/src/app/authorized/history/history.component.html
+++ b/src/app/authorized/history/history.component.html
@@ -32,12 +32,12 @@
             </thead>
             <tbody>
             <tr class="bg-white border-b transition duration-300 ease-in-out hover:bg-gray-100" *ngFor="let item of data">
-              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{item.createdAt | date:'medium':'':'de-DE'}}</td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{item.created_at | date:'medium':'':'de-DE'}}</td>
               <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{item.type}}</td>
-              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{item.providerA}}</td>
-              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{item.providerB}}</td>
-              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{item.priceA}}</td>
-              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{item.priceB}}</td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{item.provider_a}}</td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{item.provider_b}}</td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{item.price_a}}</td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{item.price_b}}</td>
               <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                 <button [routerLink]="['/chart', item.id]" type="button" class="inline-block px-6 py-2 border-2 border-green-500 text-black-500 font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out">Chart</button>
               </td>
