--- a/src/app/child-component/aws-elastic-computing-cloud/aws-elastic-computing-cloud.component.html
+++ b/src/app/child-component/aws-elastic-computing-cloud/aws-elastic-computing-cloud.component.html
@@ -24,16 +24,16 @@
         </div>
         <div  class="grid grid-cols-1 pt-2">
           <label for="amazon-instance-type" class="block text-sm font-medium text-gray-700">Instance Type</label>
-          <select [(ngModel)]="selectedInstanceType" (ngModelChange)="selectedPricePerHourChanged($event)" id="amazon-instance-type" name="amazon-instance-type"
+          <select [(ngModel)]="selectedInstanceType" (ngModelChange)="selectedInstanceTypeChanged($event)" id="amazon-instance-type" name="amazon-instance-type"
                   class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
-            <option *ngFor="let item of instanceType" [ngValue]="item.price_per_hour">Family: {{item.instance_type}} {{item.core}} vCPU {{item.ram}} GiB Memory</option>
+            <option *ngFor="let item of instanceType" [ngValue]="item">Family: {{item.instance_type}} {{item.core}} vCPU {{item.ram}} GiB Memory</option>
           </select>
         </div>
         <div  class="grid grid-cols-1 pt-2">
           <label for="amazon-instance-price" class="block text-sm font-medium text-gray-700">Price per hour</label>
           <input type="text" id="amazon-instance-price" #awsInstancePrice name="amazon-instance-price"
                  class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm"
-                 [(ngModel)]="selectedInstanceType" disabled>
+                 [(ngModel)]="selectedPricePerHour" disabled>
 
         </div>
         <div class="grid grid-cols-1 pt-2">
