--- a/src/app/child-component/aws-relational-database-calculate/aws-relational-database-calculate.component.html
+++ b/src/app/child-component/aws-relational-database-calculate/aws-relational-database-calculate.component.html
@@ -8,7 +8,7 @@
   <label class="block text-sm font-medium text-[#707070] text-right pr-4">Monthly estimate</label>
 </div>
 <div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
-  <label class="block text-sm font-medium text-[#707070] text-left pl-4 "></label>
+  <label class="block text-sm font-medium text-[#707070] text-left pl-4 ">{{information.core}} vCPU {{information.ram}} RAM</label>
   <label class="block text-sm font-medium text-[#707070] text-right pr-4">{{pricePerHour * 730 | currency:'USD'}}</label>
 </div>
 <div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
