feat: US-02 completed

--- a/src/app/child-component/azure-virtual-machine/azure-virtual-machine.component.html
+++ b/src/app/child-component/azure-virtual-machine/azure-virtual-machine.component.html
@@ -16,7 +16,7 @@
           </select>
         </div>
         <div  class="grid grid-cols-1 pt-2">
-          <label for="azure-machine-image" class="block text-sm font-medium text-gray-700">Amazon Machine MachineImage</label>
+          <label for="azure-machine-image" class="block text-sm font-medium text-gray-700">Machine Image</label>
           <select id="azure-machine-image" name="azure-machine-image"
                   class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
             <option *ngFor="let item of operatingSystem">{{item.operating_system}}</option>
