--- a/src/app/child-component/aws-elastic-computing-cloud/aws-elastic-computing-cloud.component.html
+++ b/src/app/child-component/aws-elastic-computing-cloud/aws-elastic-computing-cloud.component.html
@@ -16,7 +16,7 @@
           </select>
         </div>
         <div  class="grid grid-cols-1 pt-2">
-          <label for="amazon-machine-image" class="block text-sm font-medium text-gray-700">Amazon Machine MachineImage</label>
+          <label for="amazon-machine-image" class="block text-sm font-medium text-gray-700">Amazon Machine Image</label>
           <select id="amazon-machine-image" name="amazon-machine-image"
                   class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
             <option *ngFor="let item of image">{{item.machine_image}}</option>
