fix: routing problem

--- a/src/app/unauthorized/navbar/navbar.component.html
+++ b/src/app/unauthorized/navbar/navbar.component.html
@@ -70,12 +70,12 @@
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
 
         <div i18n class="ml-3 relative" *ngIf="language">
-          <button (click)="changeToGerman()" routerLink="/at/" class="text-black px-3 py-2 rounded-md text-sm font-medium"><img src="../../../assets/germany.png" alt="German">
+          <button (click)="changeToGerman()"  class="text-black px-3 py-2 rounded-md text-sm font-medium"><img src="../../../assets/germany.png" alt="German">
           </button>
         </div>
 
         <div i18n class="ml-3 relative" *ngIf="!language">
-          <button (click)="changeToEnglish()" routerLink="/" class="text-black px-3 py-2 rounded-md text-sm font-medium"><img src="../../../assets/great-britain.png" alt="English">
+          <button (click)="changeToEnglish()" class="text-black px-3 py-2 rounded-md text-sm font-medium"><img src="../../../assets/great-britain.png" alt="English">
           </button>
         </div>
 
