feat: US-03 completed

--- a/src/app/unauthorized/lost-password/lost-password.component.html
+++ b/src/app/unauthorized/lost-password/lost-password.component.html
@@ -9,24 +9,32 @@
 
           <div class="col-span-6 sm:col-span-6">
             <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
-            <input type="email" name="email" id="email" autocomplete="email" formControlName="email"
-              class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <input [class.focus:border-emerald-500] = "email.invalid && email.touched" type="email" name="email" id="email" autocomplete="email" formControlName="email"
+                   class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <div *ngIf="(email.invalid && email.touched) || email.dirty">
+              <small *ngIf="email.errors?.['required']" class="bg-white text-red-700" role="alert">Email is empty, but is required</small>
+              <small *ngIf="email.errors?.['pattern']" class="bg-white text-red-700" role="alert">Please provide a valid email address</small>
+            </div>
           </div>
 
         </div>
       </div>
-      <div class="px-4 py-3 sm:px-6">
-        <button (click)="lostPassword()"
-          class="w-full h-12 px-5 text-black font-bold transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">Request
-          password reset</button>
-      </div>
-      <div class="px-4 py-3 sm:px-6 content-center text-center">
-        <a routerLink="/login" class=" text-emerald-500">Return to login</a>
-      </div>
-      <div class="px-4 py-3 sm:px-6 content-center text-center">
-        <p class=" text-black">Did not get confirmation email?</p>
-        <a routerLink="/resend-registration" class=" text-emerald-500">Resend confirmation email</a>
-      </div>
+
+
+        <div class="px-4 py-3 sm:px-6">
+          <button (click)="lostPassword()"
+                  class="w-full h-12 px-5 text-black font-bold transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">
+            Request
+            password reset
+          </button>
+        </div>
+        <div class="px-4 py-3 sm:px-6 content-center text-center">
+          <a routerLink="/login" class=" text-emerald-500">Return to login</a>
+        </div>
+        <div class="px-4 py-3 sm:px-6 content-center text-center">
+          <p class=" text-black">Did not get confirmation email?</p>
+          <a routerLink="/resend-registration" class=" text-emerald-500">Resend confirmation email</a>
+        </div>
 
     </form>
   </div>
