--- a/src/app/unauthorized/lost-password/lost-password.component.html
+++ b/src/app/unauthorized/lost-password/lost-password.component.html
@@ -6,20 +6,17 @@
     <form [formGroup]="formLostPassword">
       <div class="px-4 py-5 bg-white sm:p-6">
         <div class="grid grid-cols-6 gap-6">
-
           <div class="col-span-6 sm:col-span-6">
             <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
-            <input [class.focus:border-emerald-500] = "email.invalid && email.touched" type="email" name="email" id="email" autocomplete="email" formControlName="email"
+            <input type="email" name="email" id="email" autocomplete="email" formControlName="email"
                    class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             <div *ngIf="(email.invalid && email.touched) || email.dirty">
               <small *ngIf="email.errors?.['required']" class="bg-white text-red-700" role="alert">Email is empty, but is required</small>
               <small *ngIf="email.errors?.['pattern']" class="bg-white text-red-700" role="alert">Please provide a valid email address</small>
             </div>
           </div>
-
         </div>
       </div>
-
 
         <div class="px-4 py-3 sm:px-6">
           <button (click)="lostPassword()"
