--- a/src/app/unauthorized/resend-registration/resend-registration.component.html
+++ b/src/app/unauthorized/resend-registration/resend-registration.component.html
@@ -11,6 +11,10 @@
               <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
               <input type="email" name="email" id="email" autocomplete="email" formControlName="email"
                 class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+              <div *ngIf="(email.invalid && email.touched) || email.dirty">
+                <small *ngIf="email.errors?.['required']" class="bg-white text-red-700" role="alert">Email is empty, but is required</small>
+                <small *ngIf="email.errors?.['pattern']" class="bg-white text-red-700" role="alert">Please provide a valid email address</small>
+              </div>
             </div>
 
           </div>
