--- a/src/app/unauthorized/freemium/freemium.component.html
+++ b/src/app/unauthorized/freemium/freemium.component.html
@@ -1,6 +1,44 @@
-
 <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-  <div class="relative flex items-center justify-between h-16">
-    <p>freemium works!</p>
+  <div class="mt-10 sm:mt-0">
+    <div class="md:grid md:grid-cols-3 md:gap-6">
+
+      <div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <app-aws-relational-database></app-aws-relational-database>
+        </div>
+      </div>
+
+      <div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <app-gcp-cloud-sql></app-gcp-cloud-sql>
+        </div>
+      </div>
+
+      <div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <app-azure-postgresql></app-azure-postgresql>
+        </div>
+      </div>
+
+      <div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <app-aws-elastic-computing-cloud></app-aws-elastic-computing-cloud>
+
+        </div>
+      </div>
+
+      <div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <app-gcp-compute-engine></app-gcp-compute-engine>
+        </div>
+      </div>
+
+      <div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <app-azure-virtual-machine></app-azure-virtual-machine>
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
