--- a/src/app/authorized/home/home.component.html
+++ b/src/app/authorized/home/home.component.html
@@ -148,6 +148,7 @@
                 class="w-full h-12 px-5 text-black transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">
                 History
               </button>
+              <small *ngIf="showError" class="bg-white text-red-700" role="alert">Currently the backend is not reachable</small>
             </div>
           </div>
         </div>
