feat: remaining user stories

--- a/src/app/authorized/history/history.component.html
+++ b/src/app/authorized/history/history.component.html
@@ -47,6 +47,7 @@
             </tr>
             </tbody>
           </table>
+          <small *ngIf="showError" class="bg-white text-red-700" role="alert">Currently the backend is not reachable</small>
         </div>
       </div>
     </div>
