fix: confirmation resend

--- a/src/app/unauthorized/resend-registration/resend-registration.component.html
+++ b/src/app/unauthorized/resend-registration/resend-registration.component.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="px-4 py-3 sm:px-6">
-          <button (click)="resendRegistration()"
+          <button (click)="resendConformation()"
             class="w-full h-12 px-5 text-black font-bold transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">Resend confirmation email</button>
         </div>
         <div class="px-4 py-3 sm:px-6 content-center text-center">
