--- a/src/app/child-component/azure-postgresql/azure-postgresql.component.html
+++ b/src/app/child-component/azure-postgresql/azure-postgresql.component.html
@@ -33,7 +33,7 @@
           <label for="azure-storage-price" class="block text-sm font-medium text-gray-700">Price per GB</label>
         </div>
         <div class="grid grid-cols-2 gap-2">
-          <input type="number" [(ngModel)]="selectedSize" (ngModelChange)="selectedStorageSizeChanged($event)"id="azure-storage" name="azure-storage"
+          <input type="number" oninput="validity.valid||(value='');" min="0" [(ngModel)]="selectedSize" (ngModelChange)="selectedStorageSizeChanged($event)"id="azure-storage" name="azure-storage"
                  class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
           <input type="number" [(ngModel)]="selectedPricePerGb" id="azure-storage-price" name="azure-storage-price"
                  class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm" disabled>
