--- a/src/app/authorized/profile/profile.component.html
+++ b/src/app/authorized/profile/profile.component.html
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="mt-5 md:mt-0 md:col-span-2">
-        <form>
+        <form [formGroup]="profileForm">
           <div class="shadow overflow-hidden sm:rounded-md">
             <div class="px-4 py-5 bg-white sm:p-6">
               <div class="grid grid-cols-6 gap-6">
@@ -17,27 +17,48 @@
                 <div class="col-span-6 sm:col-span-1">
                   <label for="user-id" class="block text-sm font-medium text-gray-700">ID</label>
                   <input type="text" name="user-id" id="user-id"
-                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [(ngModel)]="user.id" disabled>
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [value]="user.id" disabled>
                 </div>
 
                 <div class="col-span-6 sm:col-span-5">
                 </div>
                 <div class="col-span-6 sm:col-span-3">
                   <label for="first-name" class="block text-sm font-medium text-gray-700">First name</label>
-                  <input  type="text" name="first-name" id="first-name"
-                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [(ngModel)]="user.firstName">
+                  <input  type="text" name="first-name" id="first-name" formControlName="firstName"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [value]="user.firstName" >
+                    <small *ngIf="oldFirstName && firstName.touched" class="bg-white text-gray-400">Old Value: {{oldFirstName}}</small>
+                  <div *ngIf="(firstName.invalid && firstName.touched) || firstName.dirty">
+                    <small *ngIf="firstName.errors?.['required']" class="bg-white text-red-700" role="alert">First name is
+                      empty, but is required</small>
+                    <small *ngIf="firstName.errors?.['pattern']" class="bg-white text-red-700" role="alert">Only letters are
+                      allowed</small>
+                  </div>
                 </div>
 
                 <div class="col-span-6 sm:col-span-3">
                   <label for="last-name" class="block text-sm font-medium text-gray-700">Last name</label>
-                  <input  type="text" name="last-name" id="last-name"
-                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [(ngModel)]="user.lastName">
+                  <input  type="text" name="last-name" id="last-name" formControlName="lastName"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [value]="user.lastName">
+                  <small *ngIf="oldLastName && lastName.touched" class="bg-white text-gray-400">Old Value: {{oldLastName}}</small>
+                  <div *ngIf="(lastName.invalid && lastName.touched) || lastName.dirty">
+                    <small *ngIf="lastName.errors?.['required']" class="bg-white text-red-700" role="alert">Last name is
+                      empty, but is required</small>
+                    <small *ngIf="lastName.errors?.['pattern']" class="bg-white text-red-700" role="alert">Only letters are
+                      allowed</small>
+                  </div>
                 </div>
 
                 <div class="col-span-6 sm:col-span-3">
                   <label for="email-address" class="block text-sm font-medium text-gray-700">Email address</label>
-                  <input type="text" name="email-address" id="email-address"
-                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"  [(ngModel)]="user.email">
+                  <input type="text" name="email-address" id="email-address" formControlName="email"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"  [value]="user.email">
+                  <small *ngIf="oldEmail && email.touched" class="bg-white text-gray-400">Old Value: {{oldEmail}}</small>
+                  <div *ngIf="(email.invalid && email.touched) || email.dirty">
+                    <small *ngIf="email.errors?.['required']" class="bg-white text-red-700" role="alert">Email is empty, but
+                      is required</small>
+                    <small *ngIf="email.errors?.['pattern']" class="bg-white text-red-700" role="alert">Please provide a valid
+                      email address</small>
+                  </div>
                 </div>
 
 
@@ -68,7 +89,7 @@
             <div class="flex space-x-2 justify-end p-2">
               <div>
                 <button type="button" (click)="delete()" class="inline-block px-6 py-2.5 p bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg focus:bg-red-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-red-800 active:shadow-lg transition duration-150 ease-in-out">Delete</button>
-                <button type="button" class="inline-block px-6 py-2.5 bg-transparent text-emerald-600 font-medium text-xs leading-tight uppercase rounded hover:text-emerald-700 hover:bg-gray-100 focus:bg-emerald-100 focus:outline-none focus:ring-0 active:bg-gray-200 transition duration-150 ease-in-out">Update</button>
+                <button type="button" (click)="update()" class="inline-block px-6 py-2.5 bg-transparent text-emerald-600 font-medium text-xs leading-tight uppercase rounded hover:text-emerald-700 hover:bg-gray-100 focus:bg-emerald-100 focus:outline-none focus:ring-0 active:bg-gray-200 transition duration-150 ease-in-out">Update</button>
               </div>
             </div>
           </div>
