--- a/src/app/unauthorized/login/login.component.html
+++ b/src/app/unauthorized/login/login.component.html
@@ -10,7 +10,7 @@
 
           <div class="relative col-span-6 sm:col-span-6">
             <input type="email" id="email" name="email" autocomplete="email" formControlName="email"
-                   class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-black bg-transparent rounded-lg border-1 border-gray-800 appearance-none text-white border-gray-900 focus:border-emerald-500 focus:outline-none focus:ring-0 focus:border-emerald-600 peer"
+                   class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-black bg-transparent rounded-lg border-1 border-gray-800 appearance-none border-gray-900 focus:border-emerald-500 focus:outline-none focus:ring-0 focus:border-emerald-600 peer"
                    placeholder=" "/>
             <label for="email"
                    class="absolute text-sm text-gray-500 text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-focus:text-emerald-600 peer-focus:text-emerald-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Email
@@ -26,7 +26,7 @@
           <div class="relative col-span-6 sm:col-span-6">
 
             <input type="password" id="password" name="password" autocomplete="new-password" formControlName="password"
-                   class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-black bg-transparent rounded-lg border-1 border-gray-300 appearance-none text-white border-gray-600 focus:border-emerald-500 focus:outline-none focus:ring-0 focus:border-emerald-600 peer"
+                   class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-black bg-transparent rounded-lg border-1 border-gray-300 appearance-none border-gray-600 focus:border-emerald-500 focus:outline-none focus:ring-0 focus:border-emerald-600 peer"
                    placeholder=" "/>
             <label for="password"
                    class="absolute text-sm text-gray-500 text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-focus:text-emerald-600 peer-focus:text-emerald-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Password</label>
